# JobRadar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8a0b843260f9_initial_models.py
backend/src/: main.py
backend/src/adapters/: gupy.py  remotive.py
backend/src/api/routers/: admin.py  alerts.py  applications.py  areas.py  auth.py  dashboard.py  favorites.py  jobs.py  preferences.py  search_history.py  users.py
backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  i18n.py  logging.py  rate_limit.py  redis.py  security.py
backend/src/i18n/: en.yml  pt-br.yml
backend/src/models/: __init__.py  alert_log.py  application.py  area.py  base.py  favorite.py  job.py  job_source.py  preference.py  search_history.py  user.py
backend/src/protocols/: auth.py  job_source.py
backend/src/repositories/: admin_repository.py  alert_log_repository.py  application_repository.py  area_repository.py  dashboard_repository.py  favorite_repository.py  job_repository.py  preference_repository.py  search_history_repository.py  source_repository.py  user_repository.py
backend/src/schemas/: admin.py  alert.py  application.py  area.py  auth.py  favorite.py  job.py  pagination.py  preference.py  user.py
backend/src/services/: admin_service.py  alert_service.py  application_service.py  area_service.py  auth_service.py  collection_service.py  dashboard_service.py  deduplication_service.py  email_service.py  favorite_service.py  job_search_service.py  normalization_service.py  preference_service.py  search_history_service.py  user_service.py
backend/src/workers/: celery_app.py
backend/src/workers/tasks/: alerts.py  collection.py  maintenance.py
backend/tests/: conftest.py  fakes.py
(+86 files in other folders)
