[project]
name = "jobradar-backend"
version = "0.1.0"
description = "JobRadar API Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "redis>=5.0",
    "celery[redis]>=5.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
    "resend>=2.0",
    "python-i18n[yaml]>=0.3",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "faker>=30.0",
    "factory-boy>=3.3",
    "freezegun>=1.4",
    "respx>=0.21",
    "testcontainers[postgres]>=4.0",
    "fakeredis>=2.25",
    "ruff>=0.6",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests (fast, no DB)",
    "integration: integration tests (real DB/Redis)",
    "e2e: end-to-end tests (full flows)",
    "slow: tests that take > 5s",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src"]
omit = ["src/workers/celery_app.py", "src/core/config.py", "src/core/database.py", "src/core/logging.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "RET", "SIM", "TCH", "ARG", "PTH", "ERA"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
